[tool.poetry]
name = "marvel-bot"
version = "0.7.4"
description = "Simple bot that fetch data from Marvel API and tweet every X amount of time information of a random character."
authors = ["Ariel Parra <darkaico@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
tweepy = "^3.8.0"
python-dotenv = "^0.13.0"
dacite = "^1.5.0"
schedule = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.10"
faker = "^13.12.0"
pytest-cov = "^4.0"
ipdb = "^0.13.9"
black = "^22.10"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
