[tool.poetry]
name = "marvel-bot"
version = "0.7.7"
description = "Simple bot that fetch data from Marvel API and tweet every X amount of time information of a random character."
authors = ["Ariel Parra <darkaico@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28"
tweepy = "^4.12"
python-dotenv = "^0.21"
dacite = "^1.6"
schedule = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pytest-mock = "^3.10"
faker = "^15.3"
pytest-cov = "^4.0"
ipdb = "^0.13"
black = "^22.10"
factory-boy = "^3.2"
pre-commit = "^2.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
